--- a/clicktocall/templates/index.html
+++ b/clicktocall/templates/index.html
@@ -13,25 +13,13 @@
   <body>
     <div class="container">
         <h1>Click To Call</h1>
-        <p>
-            Click To Call converts your website's users into engaged customers by 
-            creating an easy way for your customers to contact your sales and 
-            support teams right on your website.
-        </p>
-        <p>Here's an example of how it's done!</p>
         <hr>
-
         <!-- C2C contact form-->
         <div class="row">
             <div class="col-md-12">
                 <form id="contactForm" role="form">
                     <div class="form-group">
-                        <h3>Call Sales</h3>
-                        <p class="help-block">
-                            Are you interested in impressing your friends and 
-                            confounding your enemies? Enter your phone number 
-                            below, and our team will contact you right away.
-                        </p>
+                        <h3>Make a call</h3>
                     </div>
                     <div class="form-group">
                         <input type="text" id="phoneNumber" 
@@ -40,12 +28,16 @@
                     <button type="submit" class="btn btn-default">
                         Contact Sales
                     </button>
+                    <button type="submitvoice" class="noOngoingCall" disabled>
+                    </button>
                 </form>
             </div>
         </div>
     </div>
+    <p id="callStatus">Uninitialised</p>
     <!-- Include page dependencies -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="//static.twilio.com/libs/twiliojs/1.2/twilio.min.js"></script>
     <script src="/static/js/intlTelInput.min.js"></script>
     <script src="/static/js/app.js"></script>
   </body>
