WIP. Bump Twilio JS lib version, etc.

--- a/clicktocall/templates/index.html
+++ b/clicktocall/templates/index.html
@@ -37,7 +37,7 @@
     <p id="callStatus">Uninitialised</p>
     <!-- Include page dependencies -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="//static.twilio.com/libs/twiliojs/1.2/twilio.min.js"></script>
+    <script type="text/javascript" src="//media.twiliocdn.com/sdk/js/client/v1.5/twilio.min.js"></script>
     <script src="/static/js/intlTelInput.min.js"></script>
     <script src="/static/js/app.js"></script>
   </body>
