--- a/clicktocall/templates/index.html
+++ b/clicktocall/templates/index.html
@@ -19,11 +19,11 @@
             <div class="col-md-12">
                 <form id="contactForm" role="form">
                     <div class="form-group">
-                        <h3>Make a call</h3>
+                        <h3>Enter a number</h3>
                     </div>
                     <div class="form-group">
                         <input type="text" id="phoneNumber" 
-                            value="{{ defaultPhoneNumber }}" class="form-control">
+                            value="{{ defaultPhoneNumber }}" callerid="{{ callerId }}" class="form-control">
                     </div>
                     <div class="form-group">
                         <p id="callstatus" class="bg-info">Uninitialised</p>
